z-index fix

--- a/src/components/headers/PageHeader.scss
+++ b/src/components/headers/PageHeader.scss
@@ -7,6 +7,7 @@
   top:0;
   width: 100%;
   box-shadow: 0 0 6px rgba($gray-2, 0.5);
+  z-index: 10;
 }
 #page-header__wrapper {
   padding-top: 1rem;
